5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1723_2499.log
== TEST (2019-05-13 12:28:22) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	s = s + i

print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:28:48) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	s = s + f

print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:29:21) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	factorial(s = s + f)

print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:16:48) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	s = s + f
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:19:00) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	s = s + 1 factoial(i)
	i = i +1
	
print(round(s,8))
-- ERROR:
File "XXXX", line 10
    s = s + 1 factoial(i)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:19:15) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i>=f):
	s = s + 1 factorial(i)
	i = i +1
	
print(round(s,8))
-- ERROR:
File "XXXX", line 10
    s = s + 1 factorial(i)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:19:45) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 factorial(i)
	i = i +1
	
print(round(s,8))
-- ERROR:
File "XXXX", line 10
    s = s + 1 factorial(i)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:05) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:30) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:37) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:46) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:56) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:21:07) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- EXECUTION TIME:
0.15199
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:13) 
-- CODE:
from math import*
k= int(input(""))


s=0
i=0
f=k-1

while(i<=f):
	s = s + 1 /factorial(i)
	i = i +1
	
print(round(s,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
